# name: TestEvents.test_event_property_values
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%qw%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%QW%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%6%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%qw%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%QW%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%6%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2022-12-15 12:13:35.834680'
    AND timestamp < '2022-12-16 12:13:40.834694'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2022-12-16 12:13:40.859033'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties, group0_properties, group1_properties, group2_properties, group3_properties, group4_properties, group0_created_at, group1_created_at, group2_created_at, group3_created_at, group4_created_at),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2022-12-15 12:13:35.896615'
    AND timestamp < '2022-12-16 12:13:40.896630'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties, group0_properties, group1_properties, group2_properties, group3_properties, group4_properties, group0_created_at, group1_created_at, group2_created_at, group3_created_at, group4_created_at),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2022-12-16 12:13:40.907192'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2022-12-15 12:13:35.931441'
    AND timestamp < '2022-12-16 12:13:40.931456'
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2022-12-16 12:13:40.939004'
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2022-12-15 12:13:35.958248'
    AND timestamp < '2022-12-16 12:13:40.958264'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2022-12-16 12:13:40.978562'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
